# pikasay_justice

CLI_App/: poem.txt
CLI_App/src/: lib.rs
CLI_App/tests/: grep_intergration_test.rs
Guessing_Game/: Cargo.toml  output.txt
Guessing_Game/src/: main.rs
WebServer/: Cargo.toml  index.html
WebServer/src/: lib.rs  main.rs
chat_app/client/: Cargo.toml
chat_app/client/src/: main.rs
chat_app/server/: Cargo.toml
chat_app/server/src/: main.rs
pikasay/: Cargo.toml  README.md  alt.txt
pikasay/src/: main.rs
pikasay/tests/: intergration_test.rs
port_sniffer/: Cargo.toml  README.md
port_sniffer/src/: main.rs
rocket_api/: Cargo.toml  Procfile
rocket_api/migrations/2022-02-18-063611_create_parent/: down.sql  up.sql
rocket_api/public/: 404.html  index.html
rocket_api/src/: db.rs  main.rs  models.rs  routes.rs  schema.rs  static_files.rs
