[package]
name = "port_sniffer_justice"
version = "0.1.0"
edition = "2021"
authors=["Justice Eli"]
description="port sniffer that uses 1000 threads by default"
license="MIT"
readme="README.md"
repository="https://github.com/JusticeEli/port_sniffer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colour = "0.6.0"
